--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
 
   flutter_localizations:
     sdk: flutter
+  flutter_svg: ^2.2.0
 
 dev_dependencies:
   flutter_test:
@@ -39,7 +40,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-      - assets/webp/
+    - assets/webp/
+    - assets/icons/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
