--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,9 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_svg: ^2.2.0
+  dartz: ^0.10.1
+  equatable: ^2.0.7
+  connectivity_plus: ^6.1.4
 
 dev_dependencies:
   flutter_test:
