--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   dartz: ^0.10.1
   equatable: ^2.0.7
   connectivity_plus: ^6.1.4
+  dio: ^5.8.0+1
 
 dev_dependencies:
   flutter_test:
