--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,11 @@ dependencies:
   equatable: ^2.0.7
   connectivity_plus: ^6.1.4
   dio: ^5.8.0+1
+  drift_flutter: ^0.2.4
+  drift: ^2.27.0
+  drift_dev: ^2.27.0
+  path_provider: ^2.1.5
+  path: ^1.9.1
 
 dev_dependencies:
   flutter_test:
