feat(auth): implement Google sign-in functionality
- Added GoogleSignInDataSource for handling Google sign-in operations.
- Updated AuthRemoteDataSource to include googleSignIn method.
- Enhanced AuthRepositoryImpl to support loginWithGoogle use case.
- Created LoginWithGoogle use case for managing Google sign-in logic.
- Modified AuthViewModel to handle Google sign-in state.
- Updated auth providers to include GoogleSignInDataSource and loginWithGoogle use case.
- Refactored various files to replace 'zifyr' with 'zefyr' for consistency.
- Added necessary dependencies for Google sign-in in pubspec.yaml.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: zifyr
+name: zefyr
 description: "A new Flutter project."
 
 publish_to: "none"
@@ -32,6 +32,7 @@ dependencies:
   drift_dev: ^2.27.0
   path_provider: ^2.1.5
   path: ^1.9.1
+  google_sign_in: ^7.0.0
 
 dev_dependencies:
   flutter_test:
