fix(env): удаление запятой в конце строки GoogleClientID

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-GoogleClientID='522199584021-8nurkg0vcsqc6d7ish342k1i8828s2np.apps.googleusercontent.com',
+GoogleClientID='522199584021-8nurkg0vcsqc6d7ish342k1i8828s2np.apps.googleusercontent.com'
 GoogleClientSecret='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'
