--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   path: ^1.9.1
   google_sign_in: ^7.0.0
   flutter_dotenv: ^5.2.1
+  email_validator: ^3.0.0
 
 dev_dependencies:
   flutter_test:
