--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter_dotenv: ^5.2.1
   email_validator: ^3.0.0
   collection: ^1.19.1
+  skeletonizer: ^2.1.0
 
 dev_dependencies:
   flutter_test:
