feat: integrate toastification for user feedback and enhance error handling
- Added Toastification for displaying error messages across the app.
- Updated the AuthInterceptor to handle token refresh and error responses more gracefully.
- Refactored the AuthRepository to utilize RepositoryHelper for cleaner error handling.
- Enhanced email checking functionality in the Auth flow with user feedback.
- Improved error handling in various repositories and data sources.
- Introduced a new RepositoryHelper class to centralize error handling logic.
- Updated dependencies in pubspec.yaml to include toastification package.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   email_validator: ^3.0.0
   collection: ^1.19.1
   skeletonizer: ^2.1.0
+  toastification: ^3.0.3
   flutter_localizations:
     sdk: flutter
 dev_dependencies:
