feat(live): добавить поддержку камеры и микрофона для стриминга, обновить маршрутизацию и модели

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,9 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+<string>Приложению нужен доступ к камере для стрима</string>
+<key>NSMicrophoneUsageDescription</key>
+<string>Приложению нужен доступ к микрофону для стрима</string>
 </dict>
 </plist>
