--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.8
-  go_router: ^15.2.3
+  go_router: ^16.0.0
 
   riverpod_annotation: ^2.6.1
   intl: ^0.20.2
@@ -36,6 +36,8 @@ dependencies:
   collection: ^1.19.1
   skeletonizer: ^2.1.0
   toastification: ^3.0.3
+  camera: ^0.11.1
+  permission_handler: ^12.0.1
   flutter_localizations:
     sdk: flutter
 dev_dependencies:
