feat: Update AndroidManifest to include additional permissions and features for camera and audio
feat: Enhance router to include routes for local and remote participants in live view

fix: Update router hash after adding new routes

fix: Update auth flow view model hash after changes

refactor: Change authViewModelProvider to AutoDisposeStateNotifierProvider for better resource management

fix: Refactor LiveView to properly handle stream creation and navigation

feat: Implement LocalParticipantView for displaying local video feed

feat: Update OnAirView to manage camera initialization and stream status

feat: Create RemoteParticipantView as a placeholder for remote participant display

refactor: Update stream providers to use AutoDisposeStateNotifierProvider for better lifecycle management

chore: Update pubspec.yaml to use latest livekit_client and flutter_webrtc versions

feat: Implement CameraService for managing camera initialization and permissions

feat: Create StreamStatusService to manage stream state transitions

feat: Implement OnAirViewModel to handle camera and stream logic

feat: Create onAirProviders for managing dependencies and state in the on-air feature

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ dependencies:
 
   riverpod_annotation: ^2.6.1
   intl: ^0.20.2
-  livekit_client: ^2.4.8
+  livekit_client: ^2.4.9
   flutter_riverpod: ^2.6.1
 
   flutter_svg: ^2.2.0
@@ -40,6 +40,7 @@ dependencies:
   permission_handler: ^12.0.1
   flutter_localizations:
     sdk: flutter
+  flutter_webrtc: ^0.14.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
