--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   path_provider: ^2.1.5
   path: ^1.9.1
   google_sign_in: ^7.1.1
+  sign_in_with_apple: ^7.0.1
   flutter_dotenv: ^5.2.1
   email_validator: ^3.0.0
   collection: ^1.19.1
