--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-GoogleClientID='522199584021-8nurkg0vcsqc6d7ish342k1i8828s2np.apps.googleusercontent.com'
-GoogleClientSecret='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'
+GoogleClientID='522199584021-9ko37v4t487lbks3dsgusruip4bg03eo.apps.googleusercontent.com'
+GoogleClientSecret='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'
+
+GoogleClientIDDebug='522199584021-jt3flq76be6knlesstfe8d3rr5ssk3vl.apps.googleusercontent.com'
